--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "mongoose": "^4.3.7"
+    "mongoose": "^4.3.7",
+    "request": "^2.67.0"
   },
   "devDependencies": {},
   "scripts": {
