--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "mongoose": "^4.3.7",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "spotify-web-api-node": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
