--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Im making a web app that utilizes the spotify api to render new releases and allow a user to authorize their spotify account and create playlists on behalf of the user.",
   "main": "app.js",
-  "scripts" : {
-    "prestart":"npm install",
-    "start": "node app.js"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
+    "connect-mongo": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "mongoose": "^4.3.7",
@@ -17,9 +17,6 @@
     "spotify-web-api-node": "^2.2.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alschofield/final-project.git"
