--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "connect-mongo": "^1.1.0",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "mongoose": "^4.3.7",
