--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "async-waterfall": "^0.1.5",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "connect-mongo": "^1.1.0",
